[gd_scene load_steps=3 format=2]

[ext_resource path="res://SettungsMenue.gd" type="Script" id=1]
[ext_resource path="res://MainMenuAssets/Theme_Main.tres" type="Theme" id=2]

[node name="SettungsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 8.0
margin_right = 1.0
margin_bottom = 8.0
script = ExtResource( 1 )

[node name="BotomAnker" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MediumAnker" type="Control" parent="."]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.4
margin_top = -116.0
margin_bottom = -116.0

[node name="VBoxContainer" type="VBoxContainer" parent="MediumAnker"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 52.0
margin_right = 200.0
margin_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 100 )
alignment = 1

[node name="MouseLook_Buttons" type="Control" parent="MediumAnker/VBoxContainer"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
focus_neighbour_bottom = NodePath("../ToggleScreen_Button")
theme = ExtResource( 2 )

[node name="Button_Less" type="Button" parent="MediumAnker/VBoxContainer/MouseLook_Buttons"]
margin_left = -80.0
margin_top = -5.0
margin_right = -20.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../GamepadLook_Butons/Button_Less")
theme = ExtResource( 2 )
text = "<"

[node name="Button_Info" type="Button" parent="MediumAnker/VBoxContainer/MouseLook_Buttons"]
margin_left = -10.0
margin_top = 2.0
margin_right = 410.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../ToggleScreen_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Mouse Look: 100%"

[node name="Button_More" type="Button" parent="MediumAnker/VBoxContainer/MouseLook_Buttons"]
margin_left = 420.0
margin_top = -5.0
margin_right = 480.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../Button_Less")
focus_neighbour_top = NodePath("../../Return_Button")
focus_neighbour_bottom = NodePath("../../GamepadLook_Butons/Button_More")
theme = ExtResource( 2 )
text = ">"

[node name="Spacing" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 54.0
margin_right = 400.0
margin_bottom = 68.0

[node name="GamepadLook_Butons" type="Control" parent="MediumAnker/VBoxContainer"]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
focus_neighbour_bottom = NodePath("../ToggleScreen_Button")
theme = ExtResource( 2 )

[node name="Button_Less" type="Button" parent="MediumAnker/VBoxContainer/GamepadLook_Butons"]
margin_left = -80.0
margin_top = -5.0
margin_right = -20.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../MouseLook_Buttons/Button_Less")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../Music_Buttons/Button_Less")
theme = ExtResource( 2 )
text = "<"

[node name="Button_Info" type="Button" parent="MediumAnker/VBoxContainer/GamepadLook_Butons"]
margin_left = -10.0
margin_top = 2.0
margin_right = 410.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../ToggleScreen_Button")
theme = ExtResource( 2 )
disabled = true
text = "Gamepad Look: 100%"

[node name="Button_More" type="Button" parent="MediumAnker/VBoxContainer/GamepadLook_Butons"]
margin_left = 420.0
margin_top = -5.0
margin_right = 480.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../Button_Less")
focus_neighbour_top = NodePath("../../MouseLook_Buttons/Button_More")
focus_neighbour_bottom = NodePath("../../Music_Buttons/Button_More")
theme = ExtResource( 2 )
text = ">"

[node name="Spacing5" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 126.0
margin_right = 400.0
margin_bottom = 140.0

[node name="Music_Buttons" type="Control" parent="MediumAnker/VBoxContainer"]
margin_top = 144.0
margin_right = 400.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
focus_neighbour_bottom = NodePath("../ToggleScreen_Button")
theme = ExtResource( 2 )

[node name="Button_Less" type="Button" parent="MediumAnker/VBoxContainer/Music_Buttons"]
margin_left = -80.0
margin_top = -5.0
margin_right = -20.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../GamepadLook_Butons/Button_Less")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../Audio_Buttons/Button_Less")
theme = ExtResource( 2 )
text = "<"

[node name="Button_Info" type="Button" parent="MediumAnker/VBoxContainer/Music_Buttons"]
margin_left = -10.0
margin_top = 2.0
margin_right = 410.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../ToggleScreen_Button")
theme = ExtResource( 2 )
disabled = true
text = "Music Volume: 100%"

[node name="Button_More" type="Button" parent="MediumAnker/VBoxContainer/Music_Buttons"]
margin_left = 420.0
margin_top = -5.0
margin_right = 480.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../Button_Less")
focus_neighbour_top = NodePath("../../GamepadLook_Butons/Button_More")
focus_neighbour_bottom = NodePath("../../Audio_Buttons/Button_More")
theme = ExtResource( 2 )
text = ">"

[node name="Spacing4" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 198.0
margin_right = 400.0
margin_bottom = 212.0

[node name="Audio_Buttons" type="Control" parent="MediumAnker/VBoxContainer"]
margin_top = 216.0
margin_right = 400.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
focus_neighbour_bottom = NodePath("../ToggleScreen_Button")
theme = ExtResource( 2 )

[node name="Button_Less" type="Button" parent="MediumAnker/VBoxContainer/Audio_Buttons"]
margin_left = -80.0
margin_top = -5.0
margin_right = -20.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Music_Buttons/Button_Less")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../ToggleScreen_Button")
theme = ExtResource( 2 )
text = "<"

[node name="Button_Info" type="Button" parent="MediumAnker/VBoxContainer/Audio_Buttons"]
margin_left = -10.0
margin_top = 2.0
margin_right = 410.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
focus_neighbour_right = NodePath("../Button_More")
focus_neighbour_bottom = NodePath("../../ToggleScreen_Button")
theme = ExtResource( 2 )
disabled = true
text = "Audio Volume: 100%"

[node name="Button_More" type="Button" parent="MediumAnker/VBoxContainer/Audio_Buttons"]
margin_left = 420.0
margin_top = -5.0
margin_right = 480.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../Button_Less")
focus_neighbour_top = NodePath("../../Music_Buttons/Button_More")
focus_neighbour_bottom = NodePath("../../ToggleScreen_Button")
theme = ExtResource( 2 )
text = ">"

[node name="Spacing2" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 270.0
margin_right = 400.0
margin_bottom = 284.0

[node name="ToggleScreen_Button" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 288.0
margin_right = 400.0
margin_bottom = 338.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Audio_Buttons/Button_Less")
focus_neighbour_bottom = NodePath("../Return_Button")
theme = ExtResource( 2 )
text = "Fullscreen: Off"

[node name="Spacing3" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 342.0
margin_right = 400.0
margin_bottom = 356.0

[node name="Return_Button" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 360.0
margin_right = 400.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../ToggleScreen_Button")
focus_neighbour_bottom = NodePath("../MouseLook_Buttons/Button_Less")
theme = ExtResource( 2 )
text = "Main Menu"

[connection signal="pressed" from="MediumAnker/VBoxContainer/MouseLook_Buttons/Button_Less" to="." method="_on_less_mouse_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/MouseLook_Buttons/Button_Info" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/MouseLook_Buttons/Button_More" to="." method="_on_more_mouse_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/GamepadLook_Butons/Button_Less" to="." method="_on_less_gamepad_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/GamepadLook_Butons/Button_Info" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/GamepadLook_Butons/Button_More" to="." method="_on_more_gamepad_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Music_Buttons/Button_Less" to="." method="_on_less_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Music_Buttons/Button_Info" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Music_Buttons/Button_More" to="." method="_on_more_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Audio_Buttons/Button_Less" to="." method="_on_less_audio_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Audio_Buttons/Button_Info" to="." method="_on_toggle_audio_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Audio_Buttons/Button_More" to="." method="_on_more_audio_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/ToggleScreen_Button" to="." method="_on_toggle_fullscreen_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Return_Button" to="." method="_on_return_button_pressed"]
